:sparkles: Add Custom Timeout - Closes #8
- Now one can set a timeout either through the scons command or directly in SConstruct. Use either of:
    - Run `scons timeout=TIMEINSECONDS` - This assumes the default SConstruct is used
    - In SConstruct invoke `setup(env, directories, timeout)`
- Add the test
- Modify example to simulate a long running task with time.sleep

--- a/nbflow/example/analyses/analyze_data.ipynb
+++ b/nbflow/example/analyses/analyze_data.ipynb
@@ -26,6 +26,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "time.sleep(5) # Simulate long running task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
